--- a/src/styles/pages/_notFound.scss
+++ b/src/styles/pages/_notFound.scss
@@ -5,6 +5,10 @@
   background: $color-3;
   border-radius: $borderRadius;
   text-align: center;
+  
+  .paddingNoFound{
+  padding-bottom: 50px;
+  }
 
   h3 {
     margin-bottom: 3rem;
