--- a/src/styles/pages/_knowledges.scss
+++ b/src/styles/pages/_knowledges.scss
@@ -136,6 +136,9 @@
       .exp-2 {
         grid-area: 3;
       }
+      .exp-3 {
+        grid-area: 4;
+      }
     }
     .otherSkills {
       grid-area: O;
